# specify

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs  paths.rs  spec_meta.rs  validator.rs
src/cli/: mod.rs
src/commands/: check.rs  generate.rs  init.rs  mod.rs  sync.rs
src/config/: mod.rs
src/filesystem/: mod.rs
src/generator/: mod.rs
