[package]
name = "specify"
version = "0.1.1"
edition = "2021"
description = "CLI for YAML spec files beside source code (template-driven check)"
readme = "README.md"
# Set to your real URL before publishing; optional for local `cargo install --path`.
repository = "https://github.com/Pulko/specify"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
